--- a/src/content/posts/容忍与自由.md
+++ b/src/content/posts/容忍与自由.md
@@ -2,8 +2,7 @@
 title: 容忍与自由
 pubDate: 1959-03-16
 categories: ['胡适']
-description: 'test banner'
-banner: 'https://lz233.ac.cn/2023/12/26/musings-in-late-2023/banner.avif'
+description: 'test url banner'
 ---
 
 　　十七八年前，我最后一次会见我的母校康耐儿大学的史学大师布尔先生（George Lincoln Burr）。我们谈到英国史学大师阿克顿（Lord Acton）一生准备要著作一部《自由之史》，没有写成他就死了。布尔先生那天谈话很多，有一句话我至今没有忘记。他说，“我年纪越大，越感觉到容忍（tolerance）比自由更重要”。
