--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -1,5 +1,32 @@
 import LayoutDefault from "~/layouts/LayoutDefault.astro"
+import Comment from "~/components/Comment.astro";
 
 <LayoutDefault>
-
+<article class="heti">
+<h1 class="post-title!">
+    <a href={`/friends`}>友人</a>
+</h1>
+|  好耶！(按时间排序，失效的会添加删除线以作存档)  |
+| :----------------------------------------------: |
+|       [Yuko's Blog](https://blog.779.moe)        |
+|   [双霖 - LineSoft](https://www.linesoft.dev)    |
+|   [MlgmXyysd's Cat Nest](https://www.neko.ink)   |
+|            [鱼雨昱](https://yuu.ink)             |
+|         [Cynosura](https://cynosura.one)         |
+| [XiaoMengXin's Blog](https://blog.salt-fish.moe) |
+|   [ShiSheng's Blog](https://blog.shisheng.icu)   |
+|        [羽韵酱的小站](https://lelinus.cn)        |
+|       [Zikin的独立博客](https://zikin.org)       |
+|     ~~[Nekolas](https://blog.nekolas.cafe)~~     |
+|   [Aaki's Notes](https://mikan.bangdream.moe)    |
+|         [抹茶酱の日常](https://matce.cn)         |
+|    ~~[ShinoMoe笔记本](https://shinomoe.xyz)~~    |
+|      [Yuuta's Blog](https://blog.yuuta.moe)      |
+|        [Warbler's Tea](https://uguisu.ch)        |
+|  [ObservatoryX](https://observatoryx.github.io)  |
+|         [晨鹤部落格](https://chenhe.me)          |
+|       [Kevin's Blog](https://kevintan.pro)       |
+|     [ℂ𝕚𝕔𝕒𝕕𝕒𝟘𝟘𝟘](https://www.cicada000.work)      |
+</article>
+<Comment/>
 </LayoutDefault>
