--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -96,4 +96,9 @@ import Card from "~/components/Card.astro";
         image="https://blog.rewired.moe/apple-touch-icon.png"
         title="Blog Rewired"
     />
+    <Card
+        href="https://blog.xinshijiededa.men"
+        image="https://raw.githubusercontent.com/OverflowCat/blog/test_a/imgs/avatar/xni.webp"
+        title="新世界的大门"
+    />
 </div>
