Add Steven Lynn's Blog

--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -101,4 +101,9 @@ import Card from "~/components/Card.astro";
         image="https://raw.githubusercontent.com/OverflowCat/blog/test_a/imgs/avatar/xni.webp"
         title="新世界的大门"
     />
+    <Card
+        href="https://blog.stv.lol"
+        image="https://cdn.statically.io/gh/stvlynn/cloudimg@master/blog/2310/00119-3903136696.5a5q5tg2ch00.webp"
+        title="Steven Lynn's Blog"
+    />
 </div>
