--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -93,7 +93,7 @@ import Card from "~/components/Card.astro";
     />
     <Card
         href="https://blog.rewired.moe"
-        image="https://blog.rewired.moe/apple-touch-icon.png"
+        image="https://blog.rewired.moe/favicon.svg"
         title="Blog Rewired"
     />
     <Card
@@ -103,7 +103,12 @@ import Card from "~/components/Card.astro";
     />
     <Card
         href="https://blog.stv.lol"
-        image="https://cdn.statically.io/gh/stvlynn/cloudimg@master/blog/2310/00119-3903136696.5a5q5tg2ch00.webp"
+        image="https://blog.stv.lol/avatar.svg"
         title="Steven Lynn's Blog"
+    />
+    <Card
+        href="https://kira.moe"
+        image="https://kira.moe/images/avatar.jpg"
+        title="Sotr's blog"
     />
 </div>
