--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -72,7 +72,7 @@ import Card from "~/components/Card.astro";
         title="Warbler's Tea"
     />
     <Card
-        href="https://observatoryx.github.io"
+        href="https://observatoryx.vercel.app"
         image="https://raw.githubusercontent.com/ObservatoryX/Blogpic/master/IMG_7218.JPG"
         title="ObservatoryX"
     />
