--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -88,7 +88,7 @@ import Card from "~/components/Card.astro";
     />
     <Card
         href="https://www.cicada000.work"
-        image="https://blog.cicada000.work/img/avatar_hu1ff2f7588045bb00f0fe8692d4a055be_7427_300x0_resize_box_3.png"
+        image="https://cdn.jsdelivr.net/gh/Cicada000/Cicada000/icon.ico"
         title="ℂ𝕚𝕔𝕒𝕕𝕒𝟘𝟘𝟘"
     />
     <Card
@@ -103,12 +103,17 @@ import Card from "~/components/Card.astro";
     />
     <Card
         href="https://blog.stv.lol"
-        image="https://blog.stv.lol/avatar.svg"
+        image="https://blog.stv.lol/favicon.jpeg"
         title="Steven Lynn's Blog"
     />
     <Card
         href="https://kira.moe"
         image="https://kira.moe/images/avatar.jpg"
         title="Sotr's blog"
+    />
+    <Card
+        href="https://blog.citrons.cc"
+        image="https://blog.citrons.cc/avatar"
+        title="甜檸Citron"
     />
 </div>
