--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -117,3 +117,5 @@ import Card from "~/components/Card.astro";
         title="甜檸Citron"
     />
 </div>
+
+按照添加时间排序，失效的链接可能会被排除。如果你和我认识的话，请直接联系我添加。
