--- a/src/content/posts/sdn-getting-started-1.mdx
+++ b/src/content/posts/sdn-getting-started-1.mdx
@@ -1,7 +1,7 @@
 ---
 title: SDN 从入门到交报告（一）：从 IP 到 MAC
 pubDate: 2024-12-11 20:07:54
-description: ""
+description: "本着不多学一点知识的原则，本系列文章介绍了从 IP 协议到 SDN 网络的必要知识并最终提交实验报告的速通全过程。"
 categories: [笔记]
 ---
 
