--- a/src/content/posts/every-daily-2024.mdx
+++ b/src/content/posts/every-daily-2024.mdx
@@ -1,12 +1,11 @@
 ---
 title: 2024：日常诗。
 pubDate: 2025-01-06 20:22:19
-description: ""
+description: "时光依旧在这里流淌着，可今年似乎没有发生什么能扰动世界线的变化。"
 categories: [随笔, 年鉴]
 banner: 'https://images.unsplash.com/photo-1723829361220-6d93f36ebe72?q=80&w=2834&auto=format'
 ---
 
-import { Image } from 'astro:assets';
 import ClickableImage from '~/components/ClickableImage.astro';
 import japan1 from './every-daily-2024/japan-1.webp';
 import japan2 from './every-daily-2024/japan-2.webp';
