--- a/src/content/posts/from-vanilla-android-to-flyme.mdx
+++ b/src/content/posts/from-vanilla-android-to-flyme.mdx
@@ -45,7 +45,7 @@ import clone4 from './from-vanilla-android-to-flyme/clone4.webp';
 
 Flyme 在设置中就提供了开启 Google 服务的开关，开启之后手动从 [APKMirror](https://www.apkmirror.com/apk/google-inc/google-play-store) 下载一个 Play 商店安装包即可使用，注意 APKs 会安装失败，必须使用 APK 才可，后期 Play 会自己更新成 APP Bundle 版本，大可放心。
 
-## Google Assistant & Gmini
+## Google Assistant & Gemini
 
 在 Play 商店中下载 Gemini 即可启用 Google 中的 Gemini 模块（商店里的那个项目只是个快捷方式），不过这时候会发现 Flyme 并没有提供更改预设语音助手的选项，只在自己的 Aicy 语音设置中提供了长按电源键唤醒，并且如果将 Aicy 卸载，长按电源键的行为也不会是唤醒 Gemini，合理推测是直接将 Aicy 包名写死放在了 Framework 中。
 
