--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -43,7 +43,7 @@ import Card from "~/components/Card.astro";
     />
     <Card
         href="https://lelinus.cn"
-        image="https://linus0080.github.io/images/avatar.png"
+        image="https://lelinus.cn/images/avatar.png"
         title="羽韵酱的小站"
     />
     <Card
@@ -52,9 +52,9 @@ import Card from "~/components/Card.astro";
         title="Zikin 的独立博客"
     />
     <Card
-        href="https://mikan.bangdream.moe"
+        href="https://blog.3kn.jp"
         image="https://gravatar.loli.net/avatar/da416f8013b9815f1e1c81754fffd701?s=300"
-        title="Aaki's Notes"
+        title="Mikan's Home"
     />
     <Card
         href="https://matce.cn"
