--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -121,6 +121,11 @@ import Card from "~/components/Card.astro";
         image="https://situ2001.com/avatar.png"
         title="situ2001"
     />
+    <Card
+        href="https://aprilnea.me"
+        image="https://avatars.githubusercontent.com/u/37977109?v=4"
+        title="Aprilnea"
+    />
 </div>
 
 按照添加时间排序，失效的链接可能会被排除。如果你和我认识的话，请直接联系我添加。
