--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -126,6 +126,11 @@ import Card from "~/components/Card.astro";
         image="https://avatars.githubusercontent.com/u/37977109?v=4"
         title="Aprilnea"
     />
+    <Card
+        href="https://lllgoyour.com"
+        image="https://www.gravatar.com/avatar/ac1b61118c89f247080d29aee09eaf90?size=320x320"
+        title="LLLgoyour"
+    />
 </div>
 
 按照添加时间排序，失效的链接可能会被排除。如果你和我认识的话，请直接联系我添加。
