--- a/src/pages/friends.mdx
+++ b/src/pages/friends.mdx
@@ -131,6 +131,11 @@ import Card from "~/components/Card.astro";
         image="https://www.gravatar.com/avatar/ac1b61118c89f247080d29aee09eaf90?size=320x320"
         title="LLLgoyour"
     />
+    <Card
+        href="https://qpomelo.dev"
+        image="https://qpomelo.dev/icons/avatar.jpeg"
+        title="QPomelo"
+    />
 </div>
 
 按照添加时间排序，失效的链接可能会被排除。如果你和我认识的话，请直接联系我添加。
